--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div class="sidemenu">
             <nav>
                 <ul>
-                <li><a class="gnav-sp-link" href="">ホーム</a></li>
-                <li><a class="gnav-sp-link" href="">お知らせ</a></li>
-                <li><a class="gnav-sp-link" href="">院長挨拶</a></li>
-                <li><a class="gnav-sp-link" href="">医院紹介</a></li>
-                <li><a class="gnav-sp-link" href="">アクセス</a></li>
+                <li><a class="gnav-sp-link" href="#">ホーム</a></li>
+                <li><a class="gnav-sp-link" href="#news">お知らせ</a></li>
+                <li><a class="gnav-sp-link" href="#about">院長挨拶</a></li>
+                <li><a class="gnav-sp-link" href="#introduction">医院紹介</a></li>
+                <li><a class="gnav-sp-link" href="#footer">アクセス</a></li>
                 </ul>
             </nav>
             </div>
@@ -68,7 +68,7 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="imgs/topimg.png" alt="幟町に根ざして40年。お子さまからお年寄りまで安心して通っていただける地域の「かかりつけ歯医者」"></div>
-                <div class="swiper-slide"> <img src="imgs/topimg2.png"alt="幟町に根ざして40年。お子さまからお年寄りまで安心して通っていただける地域の「かかりつけ歯医者」"></div>
+                <div class="swiper-slide"><img src="imgs/topimg2.png"alt="幟町に根ざして40年。お子さまからお年寄りまで安心して通っていただける地域の「かかりつけ歯医者」"></div>
             </div>
             <div class="swiper-button-next"></div>
             <div class="swiper-button-prev"></div>
@@ -102,7 +102,8 @@
             <figcaption class="drname">院長：山田 太郎</figcaption>
         </figure>
 
-        <p class="about-text">のぼりまち歯科は、「地域のみなさまに安心して通っていただける歯科医院」をモットーに、昭和57年に開業しました。令和1年には全面的にバリアフリー工事を行い、お子さまからご高齢の方までより安心して通っていただけるクリニックとなりました。<br>
+        <p class="about-text">のぼりまち歯科は、「地域のみなさまに安心して通っていただける歯科医院」をモットーに、昭和57年に開業しました。<br>
+        令和1年には全面的にバリアフリー工事を行い、お子さまからご高齢の方までより安心して通っていただけるクリニックとなりました。<br>
         患者様一人ひとりとのコミュニケーションを大切にしています。治療に関して、ご不安な点などありましたら何度でもご気軽にご質問ください。<br>
         予防歯科にも力を入れており、歯みがき指導も行っておりますので、ご希望の方は受付にお申し込みください。<br></p>
         </div>
