--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="hamburger" id="js_hamburger">
             <span class="hamburger_linetop"></span>
             <span class="hamburger_linecenter"></span>
-            <span class="hamburger_linebottom"></span>
+            <span class="hamburger_linebottom">MENU</span>
             </div>
             <div class="sidemenu">
             <nav>
