--- a/index.html
+++ b/index.html
@@ -120,19 +120,19 @@
         <h2 class="sec-title">医院紹介</h2>
         <div class="intro-box">
         <div class="intro-item">
-            <img class="intro-phote" src="imgs/introduction-phote1.png" alt="最新設備">
+            <img class="intro-phote" src="imgs/intr-img1.png" alt="最新設備">
             <p class="intro-title">最新設備</p>
             <p class="intro-text">当院では最新の治療機器を完備しており、予防から治療まで精度の高い診療を実現しています。</p>
         </div>
 
         <div class="intro-item">
-            <img class="intro-phote" src="imgs/introduction-phote2.png" alt="キッズスペース完備">
+            <img class="intro-phote" src="imgs/intr-img2.png" alt="キッズスペース完備">
             <p class="intro-title">キッズスペース完備</p>
             <p class="intro-text">お子さまにリラックスしてお待ちいただけるよう、おもちゃや絵本を取り揃えております。</p>
         </div>
 
         <div class="intro-item">
-            <img class="intro-phote" src="imgs/introduction-phote3.png" alt="幟町駅より徒歩3分">
+            <img class="intro-phote" src="imgs/intr-img3.png" alt="幟町駅より徒歩3分">
             <p class="intro-title">幟町駅より徒歩3分</p>
             <p class="intro-text">幟町駅より徒歩3分という好立地。お仕事・学校帰りに通っていただきやすい歯科医院です。</p>
         </div>
