--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav class="gnav">
 
         <div class="top-icon">
-            <h1><a href="index.html"><img class="logo" src="imgs/logo3.png
+            <h1><a href="index.html"><img class="logo" src="imgs/logo.png
                 " alt="のぼりまち歯科"></a></h1>
         </div>        
 
