--- a/index.html
+++ b/index.html
@@ -143,17 +143,17 @@
     <footer id="footer">
         <div class="info-big-box">
             <div class="info-box">
-                <img class="fotter-logo" src="imgs/logo3.png" alt="のぼりまち歯科">
+                <img class="fotter-logo" src="imgs/logo.png" alt="のぼりまち歯科">
                 <address>
                     <p>〒730-0016</p>
                     <p>広島県広島市中区幟町８−９</p>
                 </address>
-                <img class="hours" src="imgs/hours.png" alt="診療時間">
-                <p class="hour-text">土曜日は10：00～13：00のみ<br>木曜日・日曜日・祝日は休み</p>
+                <img class="hours" src="imgs/hours.png" alt="診療時間表（木曜日以外の平日と土曜日午前に診療を行っています。午前診療は10時から13時。午後診療15時から19時）">
+                <p class="hour-text">土曜日は午前診療（10:00～13:00）のみ<br>木曜日・日曜日・祝日は休み</p>
 
                 <div class="reserve-box">
                     <div class="phone-box">
-                        <img class="phone-icon" src="imgs/phone.png" alt="電話のアイコン">
+                        <img class="phone-icon" src="imgs/phone.png" alt="">
                         <a class="phone-number" href="tel:0120-889-1182">0120-889-1182</a>
                     </div>    
                 <!-- <a class="reserve" href="#"><img src="imgs/reserve.png" onmouseover="this.src='imgs/reserve-hover.png'" onmouseout="this.src='imgs/reserve.png'" /></a> -->
